--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lottie-react",
-  "version": "2.4.1",
+  "version": "2.4.2",
   "description": "Lottie for React",
   "keywords": [
     "lottie",
@@ -47,9 +47,6 @@
     "tsc:compile": "tsc",
     "tsc:compile:watch": "tsc --watch"
   },
-  "dependencies": {
-    "lottie-web": "^5.10.2"
-  },
   "devDependencies": {
     "@babel/core": "^7.16.7",
     "@babel/preset-env": "^7.16.8",
@@ -81,7 +78,6 @@
     "gh-pages": "^3.2.3",
     "jest": "^27.4.7",
     "jest-canvas-mock": "^2.3.1",
-    "sass": "^1.83.4",
     "npm-run-all": "4.1.5",
     "prettier": "^2.8.4",
     "react": "^18.2.0",
@@ -93,6 +89,7 @@
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-terser": "^7.0.2",
+    "sass": "^1.83.4",
     "ts-jest": "^27.1.3",
     "ts-node": "^10.9.1",
     "tslib": "^2.5.0",
@@ -102,5 +99,7 @@
     "react": "^16.8.0 || ^17.0.0 || ^18.0.0 || ^19.0.0",
     "react-dom": "^16.8.0 || ^17.0.0 || ^18.0.0 || ^19.0.0"
   },
-  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
+  "dependencies": {
+    "lottie-web": "github:CSynnestvedt/lottie-web"
+  }
 }
